1. Conflits solved